# BadgerOS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  default.nix  linker.ld  packimage.py  shell.nix
.github/workflows/: build.yaml  guidelines.yaml
common/: compiler.cmake  signal.h  syscall.h  syscall_defs.inc
common/badgelib/: arrays.h  attributes.h  badge_err.h
common/include/: attributes.h  errno.h  (+2 more)
docs/: README.md  project-structure.md  project_requirements.md  project_structure.md  styleguide.md
files/: CMakeLists.txt  Makefile
files/bak/init/: CMakeLists.txt  Makefile
files/bak/test/: Makefile
files/bak/test/src/: start.S  syscall.c
files/init/: CMakeLists.txt  Makefile
files/init/src/: main.c  start.S  syscall.S  syscall.h
files/lib/: CMakeLists.txt
files/lib/badge/: CMakeLists.txt
files/lib/crt/: CMakeLists.txt
files/lib/syscall/src/: gpio.c  i2c.c  spi.c  syscall.c
files/sbin/: CMakeLists.txt
files/sbin/init/: CMakeLists.txt  main.c
files/test/: CMakeLists.txt
files/test/src/: main.c
include/: attributes.h  badge_err.h  badge_format_str.h  badge_strings.h  blockdevice.h  filesystem.h  gpio.h  housekeeping.h  i2c.h  isr_ctx.h  kernel_ctx.h  list.h  log.h  malloc.h  memory.h  meta.h  mutex.h  num_to_str.h  panic.h  rawprint.h  scheduler.h  syscall.h  time.h
kernel/: CMakeLists.txt  Makefile
kernel/cpu/riscv/: CMakeLists.txt
kernel/cpu/riscv/include/cpu/: interrupt.h  isr.h  isr_ctx.h  mmu.h  regs.h  riscv.h  riscv_mmu.h  riscv_pmp.h  riscv_sbi.h
kernel/cpu/riscv/include/cpu/interrupt/: riscv_intc.h  riscv_plic.h
kernel/cpu/riscv/src/: backtrace.c  entrypoint.S  isr.S  isr.c  isr_ctx.S  isr_ctx.c  isr_noexc.S  panic.c  riscv_pmp.c  sbi_time.c  scheduler.c  smp.c  syscall.S  usercopy.c
kernel/cpu/riscv/src/interrupt/: riscv_intc.c  riscv_plic.c  sifive_plic.c
kernel/cpu/riscv/src/memprotect/: mmu.c  riscv_mmu.c  riscv_pmp.c
kernel/cpu/riscv/src/process/: process.c
kernel/cpu/riscv32/: CMakeLists.txt
kernel/include/: backtrace.h  blockdevice.h  cpulocal.h  filesystem.h  i2c.h  interrupt.h  isr_ctx.h  list.h  memprotect.h  page_alloc.h  smp.h  stdlib.h  syscall.h  syscall_util.h  usercopy.h
kernel/include/badgelib/: arrays.h  attributes.h  badge_err.h  badge_format_str.h  hwtimer.h  log.h  mutex.h  spinlock.h  static-buddy.h  time.h  time_private.h
kernel/include/blockdevice/: blkdev_impl.h  blkdev_internal.h  blkdev_ram.h
kernel/include/filesystem/: syscall_impl.h  vfs_fat.h  vfs_internal.h  vfs_ramfs.h  vfs_ramfs_types.h  vfs_types.h
kernel/include/loading/: kbelf_pre.h
kernel/include/process/: internal.h  process.h  sighandler.h  types.h
kernel/include/scheduler/: cpu.h  isr.h  scheduler.h  types.h
kernel/port/esp32c6/: CMakeLists.txt  flash.sh  gdbinit  linker.ld  port.mk
kernel/port/esp32c6/include/: sdkconfig.h
kernel/port/esp32c6/include/port/: clkconfig.h  hardware.h  hardware_allocation.h  interrupt.h  pmu_init.h  port.h  rawgpio.h
kernel/port/esp32c6/include/port/process/: process.h  types.h
kernel/port/esp32c6/include/soc/: ext_irq.h  io_mux_struct.h  plic_struct.h  soc_types.h
kernel/port/esp32c6/src/: clkconfig.c  interrupt.c  memprotect.c  pmu_init.c  port.c  smp.c  time.c
kernel/port/esp32c6/src/hal/: gpio.c  i2c.c  spi.c
kernel/port/esp32p4/: CMakeLists.txt  flash.sh  linker.ld  port.mk
kernel/port/esp32p4/include/: sdkconfig.h
kernel/port/esp32p4/include/port/: hardware.h  hardware_allocation.h  interrupt.h  memprotect.h  port.h
kernel/port/esp32p4/include/port/process/: types.h
kernel/port/esp32p4/include/soc/: clic_struct.h  soc_types.h
kernel/port/esp32p4/src/: interrupt.c  memprotect.c  pmu_init.c  port.c  smp.c
kernel/port/esp_common/: CMakeLists.txt
kernel/port/esp_common/include/: esp_assert.h  esp_attr.h  esp_intmtx.h  time.h
kernel/port/esp_common/include/hal/: assert.h  log.h  misc.h  regi2c_ctrl.h
kernel/port/esp_common/include/port/: time.h
kernel/port/esp_common/src/: gpio.c  hwtimer.c  i2c.c  time.c
kernel/port/generic/: CMakeLists.txt  gdbinit  limine.cfg  linker.ld  port.mk
kernel/port/generic/include/: driver.h  dtb.h
kernel/port/generic/include/driver/: ata.h  pcie.h  pcie_class.h  sata.h
kernel/port/generic/include/driver/ata/: ahci.h
kernel/port/generic/include/driver/ata/ahci/: fis.h  generic_host_ctrl.h
kernel/port/generic/include/driver/sata/: ahci_port.h  generic_host_ctrl.h  pci_cap.h
kernel/port/generic/include/port/: hardware.h  hardware_allocation.h  interrupt.h  memprotect.h  port.h  smp.h  time.h
kernel/port/generic/src/: dtb.c  dtparse.c  interrupt.c  memprotect.c  port.c  smp.c
kernel/port/generic/src/driver/: pcie.c  sata.c
kernel/port/generic/src/driver/ata/: blkdev_ata.c  sata_ahci_pcie.c
kernel/port/generic/src/hal/: gpio.c  i2c.c  spi.c  time.c
kernel/src/: housekeeping.c  interrupt.c  main.c  page_alloc.c  scheduler.c  syscall.c  time.c
kernel/src/badgelib/: arrays.c  badge_err.c  badge_format_str.c  int_routines.c  list.c  log.c  mutex.c  rawprint.c  spinlock.c
kernel/src/blockdevice/: blkdev_ram.c  blockdevice.c
kernel/src/filesystem/: filesystem.c  vfs_fat.c  vfs_ramfs.c
kernel/src/freestanding/: int_routines.c  string.c
kernel/src/hal/: syscall_impl.c
kernel/src/loading/: kbelfx.c
kernel/src/malloc/: build.sh  compiler.h  debug.h  main.c  malloc.c  slab-alloc.c  spinlock.h  static-buddy.c  static-buddy.h
kernel/src/process/: kbelfx.c  proc_memmap.c  process.c  sighandler.c  syscall_impl.c  syscall_util.c
kernel/src/scheduler/: scheduler.c  syscall_impl.c
root/: lol.txt
src/: assertions.c  badge_format_str.c  badge_strings.c  housekeeping.c  list.c  log.c  main.c  malloc.c  mutex.c  num_to_str.c  scheduler.c  syscall.c
test/: e2fs.iso  fatfs.iso  list.c  proctest  proctest.S  text2  unittest.h  userlandlib.c  userlandtest  userlandtest.c
testapp/: CMakeLists.txt  Makefile
testapp/src/: main.c  start.S  syscall.S
tools/: address-filter.py  bin2c.py  config.py  pack-image.py  pagetable.py  ramfs-gen.py  readjal.py
(+105 files in other folders)
